--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,41 @@
 :root {
-	--primary-500: #bf4f74;
+	--primary--50: hsla(348, 100%, 99%, 1);
+	--primary--100: hsla(346, 100%, 97.5%, 1);
+	--primary--200: hsla(341, 93.9%, 93.5%, 1);
+	--primary--300: hsla(339, 80%, 88.2%, 1);
+	--primary--400: hsla(335, 62.4%, 80.2%, 1);
+	--primary--500: hsla(331, 43.6%, 68%, 1);
+	--primary--600: hsla(327, 29.6%, 50.4%, 1);
+	--primary--700: hsla(324, 34.8%, 36.1%, 1);
+	--primary--800: hsla(320, 37.3%, 23.1%, 1);
+	--primary--900: hsla(318, 35.7%, 11%, 1);
+	--primary--950: hsla(313, 36%, 4.9%, 1);
+
+	/* Text-size styles */
+	--text--2xs: 0.67rem;
+	--text--xs: 0.78rem;
+	--text--sm: 0.89rem;
+	--text--base: 18px;
+	--text--lg: 1.11rem;
+	--text--xl: 1.33rem;
+	--text--2xl: 1.67rem;
+	--text--3xl: 2rem;
+	--text--4xl: 2.67rem;
+	--text--5xl: 3.33rem;
+	--text--6xl: 4rem;
+	--text--7xl: 5.33rem;
+	--text--8xl: 7.11rem;
+
+	/* Effect styles */
+	--shadow-sm: 0px 1px 2px rgba(0, 0, 0, 0.05);
+	--shadow-base: 0px 1px 3px rgba(0, 0, 0, 0.1),
+		0px 1px 2px rgba(0, 0, 0, 0.1);
+	--shadow-md: 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.1);
+	--shadow-lg: 0px 10px 15px rgba(0, 0, 0, 0.1),
+		0px 4px 6px rgba(0, 0, 0, 0.1);
+	--shadow-xl: 0px 20px 25px rgba(0, 0, 0, 0.1),
+		0px 8px 10px rgba(0, 0, 0, 0.1);
+	--shadow-2xl: 0px 25px 50px rgba(0, 0, 0, 0.25);
 }
 
 body {
@@ -20,4 +56,39 @@ body {
 
 a {
 	text-decoration: none;
+}
+
+button,
+input[type="submit"] {
+	padding: 10px 20px;
+	background: var(--primary--500);
+	color: var(--primary--50);
+	border-radius: 20px;
+	transition: all 200ms ease-in-out;
+	border: none;
+	box-shadow: var(--shadow-base);
+}
+
+button:hover,
+input[type="submit"]:hover {
+	background: var(--primary--600);
+	color: var(--primary--50);
+	transform: translateY(-2px);
+	box-shadow: var(--shadow-md);
+	cursor: pointer;
+}
+
+button:active,
+input[type="submit"]:active {
+	background: var(--primary--600);
+	color: var(--primary--50);
+	transform: translateY(1px);
+	box-shadow: var(--shadow-sm);
+	cursor: pointer;
+}
+
+input,
+select {
+	border-radius: 5px;
+	padding: 5px 10px;
 }
